--- a/csce242/assignments/assignment10/styles.css
+++ b/csce242/assignments/assignment10/styles.css
@@ -37,13 +37,13 @@ h2 {
     color: #e57373;
     margin-top: 0;
 }
-.close-btn {
-    background: none;
-    border: none;
-    color: red;
+#close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
     font-size: 18px;
+    color: red;
     cursor: pointer;
-    float: right;
 }
 .attribution {
     margin-top: 20px;
