--- a/csce242/assignments/assignment11/styles.css
+++ b/csce242/assignments/assignment11/styles.css
@@ -7,9 +7,10 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    flex-direction: row;
     gap: 20px;
     margin: 20px;
+    max-width: 1250px;
+    margin: 0 auto;
 }
 .pizza {
     width: 250px;
@@ -18,6 +19,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     cursor: pointer;
+    text-align: center;
 }
 img {
     width: 100%;
@@ -26,6 +28,10 @@ img {
 }
 h2 {
     color: #a52a2a;
+    font-size: 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .modal {
     display: none;
