--- a/csce242/assignments/assignment11/styles.css
+++ b/csce242/assignments/assignment11/styles.css
@@ -8,7 +8,8 @@ body {
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    max-width: 80%;
+    max-width: 100%;
+    width: 90%;
     margin: 20px auto;
     text-align: center;
 }
