--- a/csce242/assignments/assignment11/styles.css
+++ b/csce242/assignments/assignment11/styles.css
@@ -57,7 +57,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    transform: rotate(0deg);
+    transform: rotate(360deg);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); 
 }
 .modal-content img {
@@ -76,6 +76,7 @@ h2 {
     right: 15px;
     cursor: pointer;
     font-size: 20px;
+    color:#a52a2a;
 }
 .rotate {
     transform: rotate(360deg) !important;
