--- a/csce242/04_js_intro/js/styles.css
+++ b/csce242/04_js_intro/js/styles.css
@@ -65,6 +65,11 @@ main {
     background:var(--gallery-color);
 }
 
+/* Slideshow */
+#slideshow img {
+    max-width:100%;
+}
+
 .links {
     background:#D3DDEA;
 }
@@ -255,6 +260,20 @@ footer p {
 
     .examples section:nth-child( even ) {
         background:var(--main-background-color);
+    }
+
+    #shoes-section  {
+        max-width:100% ;
+    }
+    #shoes-section section {
+        max-width:100% !important;
+    }
+
+    .brewery {
+        background-color:var(--gallery-color);
+        padding:10px;
+        border-radius: 5px;
+        margin:5px;
     }
 }
 /* Larger screens */
