--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -684,7 +684,7 @@ button {
 
 .game-item img {
     width: 100%;
-    height: auto;
+    height: 200px;
     object-fit:contain;
     border-radius: 5px;
     margin-bottom: 10px;
