edited project part6 js

--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -690,6 +690,10 @@ button {
     margin-bottom: 10px;
 }
 
+.game-item p {
+    margin-bottom: 10px;
+}
+
 .buy-btn {
     background: #007BFF;
     color: white;
