--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -687,7 +687,7 @@ button {
     height: 200px;
     object-fit:contain;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin:0 auto;
 }
 
 .game-item p {
