--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -687,7 +687,7 @@ button {
     height: 200px;
     object-fit:cover;
     border-radius: 5px;
-    margin:0 auto;
+    display: block;
 }
 
 .game-item p {
