--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -684,10 +684,10 @@ button {
 
 .game-item img {
     width: auto;
-    height: 200px;
-    object-fit:cover;
+    height: 180px;
+    object-fit:contain;
     border-radius: 5px;
-    display: block;
+    margin:0 auto;
 }
 
 .game-item p {
