--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -683,11 +683,12 @@ button {
 }
 
 .game-item img {
-    width: auto;
+    width: 100%;
     height: 180px;
     object-fit:contain;
     border-radius: 5px;
     margin:0 auto;
+    display: block;
 }
 
 .game-item p {
