edited styles for contact form

--- a/csce242/projects/part7/styles.css
+++ b/csce242/projects/part7/styles.css
@@ -513,6 +513,11 @@ button {
     cursor: pointer;
     border-radius: 5px;
 }
+
+#map {
+    width:100%;
+    height:300px;
+}
 <!--notifications-->
 .notifications-container {
     background: white;
