--- a/csce242/projects/part7/styles.css
+++ b/csce242/projects/part7/styles.css
@@ -514,9 +514,11 @@ button {
     border-radius: 5px;
 }
 
-#map {
-    width:100%;
-    height:300px;
+.map {
+    width: 100%;
+    height: 300px;
+    border: 0;
+    display: block;
 }
 <!--notifications-->
 .notifications-container {
