--- a/csce242/projects/part7/styles.css
+++ b/csce242/projects/part7/styles.css
@@ -520,6 +520,22 @@ button {
     border: 0;
     display: block;
 }
+
+.message {
+    margin-top: 10px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    display: none;
+}
+
+.success {
+    color: black;
+}
+
+.error {
+    color: red;
+}
 <!--notifications-->
 .notifications-container {
     background: white;
