--- a/csce242/projects/part7/styles.css
+++ b/csce242/projects/part7/styles.css
@@ -521,12 +521,9 @@ button {
     display: block;
 }
 
-.message {
+#result {
     margin-top: 10px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px;
-    display: none;
+    font-weight: bold;
 }
 
 .success {
